src/objects/ADvendio__Ad_Type__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__ADTECH_KeyValueGroupID__c</fullName>
        <label>ADTECH KeyValueGroupID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the AdSpecs &amp; Rates Manager, Inventory &amp; Rates Manager, Booking Calendar, Create &amp; Update Rates Manager and AGOF Connect, only active marked records will be available.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the ad server login to be used with this ad type.</description>
        <inlineHelpText>Enter the ad server login to be used with this ad type.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>Ad Type</relationshipLabel>
        <relationshipName>Ad_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Ad_Type_KeyID__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>Ad Type_KeyID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__Adtype__c</fullName>
        <description>Choose the ad type that is required for this advertising format.</description>
        <inlineHelpText>Choose the ad type that is required for this advertising format.</inlineHelpText>
        <label>Adtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Weight-Based Bulk</fullName>
                </value>
                <value>
                    <fullName>Time-Based Bulk</fullName>
                </value>
                <value>
                    <fullName>Pay</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>BonusMakeGood</fullName>
                </value>
                <value>
                    <fullName>PublicService</fullName>
                </value>
                <value>
                    <fullName>InHouse</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Testit!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Advertising_Form_Shortform__c</fullName>
        <description>Enter a shortform for this ad type. It is only intended for internal use.</description>
        <inlineHelpText>Enter a shortform for this ad type. It is only intended for internal use.</inlineHelpText>
        <label>Advertising Form Shortform</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgofAttributes__c</fullName>
        <description>This information will be used for the export/Upload to AGOF Connect and is an additional Information for each Adtype.</description>
        <inlineHelpText>This information will be used for the export/Upload to AGOF Connect and is an additional Information for each Adtype.</inlineHelpText>
        <label>AGOF Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sticky</fullName>
                </value>
                <value>
                    <fullName>expandable</fullName>
                </value>
                <value>
                    <fullName>video</fullName>
                </value>
                <value>
                    <fullName>In-Page</fullName>
                </value>
                <value>
                    <fullName>In-Stream</fullName>
                </value>
                <value>
                    <fullName>compoundadvertisement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AvailabilityForecastMode__c</fullName>
        <description>Define the availability forecast mode. There are two options: First option is to use all ad slot sizes in one forecast and use the availability the ad server returns. The second option ist to do an availability forecast for each ad slot size and use the minimum, the maximum or the sum of the availability numbers of all ad slot sizes.</description>
        <inlineHelpText>Define whether you want the minimum, the maximum or the sum of the available impressions of each ad slot size or whether you want to use the ad server standard mode.</inlineHelpText>
        <label>Availability Forecast Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Server Standard</fullName>
                    <default>true</default>
                    <label>Ad Server Standard</label>
                </value>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Maximum</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__BleedAmount__c</fullName>
        <description>Please enter the amount of bleed in points, mm, or inches. (This information can be transferred to your flat planning tool.)</description>
        <inlineHelpText>Please enter the amount of bleed in points, mm, or inches. (This information can be transferred to your flat planning tool.)</inlineHelpText>
        <label>Bleed Amount</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__BlockedAdTypes__c</fullName>
        <label>Blocked AdTypes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Blocker_Slot__c</fullName>
        <description>This is a DART-specific field to block slots which would otherwise affect other slots.</description>
        <inlineHelpText>Für jeden Slot im BlockerSlot__c wird eine Sponsorship-Ad mit Preis von 0 EUR in DFP gebucht (alle sonstige Sachen wie Targeting etc. erfolgen genau so wie die bei regulären Ads)</inlineHelpText>
        <label>Blocker_Slot</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1024x66</fullName>
                </value>
                <value>
                    <fullName>10x1</fullName>
                </value>
                <value>
                    <fullName>15x1</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>206x60</fullName>
                </value>
                <value>
                    <fullName>20x1</fullName>
                </value>
                <value>
                    <fullName>234x60</fullName>
                </value>
                <value>
                    <fullName>250x42</fullName>
                </value>
                <value>
                    <fullName>25x1</fullName>
                </value>
                <value>
                    <fullName>2x2</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x260</fullName>
                </value>
                <value>
                    <fullName>30x1</fullName>
                </value>
                <value>
                    <fullName>320x416</fullName>
                </value>
                <value>
                    <fullName>320x480</fullName>
                </value>
                <value>
                    <fullName>320x50</fullName>
                </value>
                <value>
                    <fullName>320x5001</fullName>
                </value>
                <value>
                    <fullName>320x51</fullName>
                </value>
                <value>
                    <fullName>40x1</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>468x78</fullName>
                </value>
                <value>
                    <fullName>468x7801</fullName>
                </value>
                <value>
                    <fullName>480x360</fullName>
                </value>
                <value>
                    <fullName>50x1</fullName>
                </value>
                <value>
                    <fullName>60x1</fullName>
                </value>
                <value>
                    <fullName>60x60</fullName>
                </value>
                <value>
                    <fullName>653x490</fullName>
                </value>
                <value>
                    <fullName>70x70</fullName>
                </value>
                <value>
                    <fullName>728x90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Classification__c</fullName>
        <inlineHelpText>Die hier hinterlegte Information kann in der Produktsuche verwendet werden.</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InPage/Display</fullName>
                </value>
                <value>
                    <fullName>InStream/Video</fullName>
                </value>
                <value>
                    <fullName>nonAdServer</fullName>
                </value>
                <value>
                    <fullName>Dienstleistung</fullName>
                </value>
                <value>
                    <fullName>Teletext</fullName>
                </value>
                <value>
                    <fullName>TV/ECC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__CompanionDeliveryOption__c</fullName>
        <description>Set the delivery option for companions. Currently only used for DFP.</description>
        <inlineHelpText>Set the delivery option for companions. Currently only used for DFP.</inlineHelpText>
        <label>Companion Delivery Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>At Least One</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__CompanionSize__c</fullName>
        <description>Choose the companion slots for a master &amp; companion ad in DART.</description>
        <inlineHelpText>Choose the companion slots for a master &amp; companion ad in dfp.</inlineHelpText>
        <label>CompanionSize</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1024x768</fullName>
                </value>
                <value>
                    <fullName>10x1</fullName>
                </value>
                <value>
                    <fullName>15x1</fullName>
                </value>
                <value>
                    <fullName>160x50</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>1x5</fullName>
                </value>
                <value>
                    <fullName>206x60</fullName>
                </value>
                <value>
                    <fullName>20x1</fullName>
                </value>
                <value>
                    <fullName>25x1</fullName>
                </value>
                <value>
                    <fullName>2x2</fullName>
                </value>
                <value>
                    <fullName>2x5</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x260</fullName>
                </value>
                <value>
                    <fullName>300x60</fullName>
                </value>
                <value>
                    <fullName>30x1</fullName>
                </value>
                <value>
                    <fullName>320x150</fullName>
                </value>
                <value>
                    <fullName>320x480</fullName>
                </value>
                <value>
                    <fullName>320x50</fullName>
                </value>
                <value>
                    <fullName>320x51</fullName>
                </value>
                <value>
                    <fullName>320x60</fullName>
                </value>
                <value>
                    <fullName>40x1</fullName>
                </value>
                <value>
                    <fullName>420x240</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>480x320</fullName>
                </value>
                <value>
                    <fullName>480x360</fullName>
                </value>
                <value>
                    <fullName>480x361</fullName>
                </value>
                <value>
                    <fullName>480x70</fullName>
                </value>
                <value>
                    <fullName>50x1</fullName>
                </value>
                <value>
                    <fullName>60x1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Companion_AD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define this ad type to be created as a companion ad in ADTECH.</description>
        <inlineHelpText>With this checkbox you can define this ad type to be created as a companion ad in ADTECH.</inlineHelpText>
        <label>Companion AD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__CreativeRotationType__c</fullName>
        <description>Choose your rotation type:
Evenly: rotates evenly
Optimized: highest click-through rate will be shown most
Weighted: rotates at specified frequency
Sequential: rotates in specified order</description>
        <inlineHelpText>Choose your rotation type:
Evenly: rotates evenly
Optimized: highest click-through rate will be shown most
Weighted: rotates at specified frequency
Sequential: rotates in specified order</inlineHelpText>
        <label>Creative Rotation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evenly</fullName>
                </value>
                <value>
                    <fullName>Optimized</fullName>
                </value>
                <value>
                    <fullName>Weighted</fullName>
                </value>
                <value>
                    <fullName>Sequential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__CreativeType__c</fullName>
        <description>Choose a creative type for this ad type.</description>
        <inlineHelpText>Choose a creative type for this ad type.</inlineHelpText>
        <label>CreativeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Flash</fullName>
                </value>
                <value>
                    <fullName>Rich Media</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__EnvironmentType__c</fullName>
        <inlineHelpText>Wichtig für die Übergabe an DfP - Wenn Video ausgewählt ist ist es möglich die LiniItems in dfp als VAST zu übergeben.</inlineHelpText>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Browser</fullName>
                </value>
                <value>
                    <fullName>Video player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__External_Name__c</fullName>
        <description>Enter the ad type&apos;s name for external use. The external name will be displayed on the proposal.</description>
        <inlineHelpText>Enter the ad type&apos;s name for external use. The external name will be displayed on the proposal.</inlineHelpText>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ForecastSlots__c</fullName>
        <description>Slots to use for forecasting. If not defined, Master and / or Companion-Slots are used.</description>
        <inlineHelpText>Die hier hinterlegten Slots werden für die Abfrage am Adserver für die Ermittlung Reichweite/Verfügbarkeit berücksichtigt. Wenn keine Slots gepflegt sind, wird der Master und/ oder Campanion-Slot automatisch genutzt</inlineHelpText>
        <label>Forecast Slots</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1024x768</fullName>
                </value>
                <value>
                    <fullName>10x1</fullName>
                </value>
                <value>
                    <fullName>15x1</fullName>
                </value>
                <value>
                    <fullName>160x50</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>1x5</fullName>
                </value>
                <value>
                    <fullName>206x60</fullName>
                </value>
                <value>
                    <fullName>20x1</fullName>
                </value>
                <value>
                    <fullName>25x1</fullName>
                </value>
                <value>
                    <fullName>2x2</fullName>
                </value>
                <value>
                    <fullName>2x5</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x260</fullName>
                </value>
                <value>
                    <fullName>300x60</fullName>
                </value>
                <value>
                    <fullName>30x1</fullName>
                </value>
                <value>
                    <fullName>320x150</fullName>
                </value>
                <value>
                    <fullName>320x480</fullName>
                </value>
                <value>
                    <fullName>320x50</fullName>
                </value>
                <value>
                    <fullName>320x51</fullName>
                </value>
                <value>
                    <fullName>320x60</fullName>
                </value>
                <value>
                    <fullName>40x1</fullName>
                </value>
                <value>
                    <fullName>420x240</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>480x320</fullName>
                </value>
                <value>
                    <fullName>480x360</fullName>
                </value>
                <value>
                    <fullName>480x361</fullName>
                </value>
                <value>
                    <fullName>480x70</fullName>
                </value>
                <value>
                    <fullName>50x1</fullName>
                </value>
                <value>
                    <fullName>60x1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Format_ID__c</fullName>
        <description>Enter the format ID from your ad server. This field is specific to SMART.</description>
        <inlineHelpText>Enter the format ID from your ad server. This field is specific to SMART.</inlineHelpText>
        <label>Format ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__GoalPercent__c</fullName>
        <description>This value will be pushed to DFP as the percentage of the of total impressions in your network which is used for sponsorship or House AdTypes. For Sponsorship only: If left empty ADvendio will push 100% as default.</description>
        <inlineHelpText>Enter the percentage of total impressions in your network which you like to use for the sponsorship AdTypes. If the field is left empty ADvendio will push 100% if AdType is of type Sponsorship.</inlineHelpText>
        <label>Goal Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__GoalType__c</fullName>
        <description>The type of the goal for a campaign item. It defines the period over which the goal for a campaign item should be reached.</description>
        <inlineHelpText>The type of the goal for a campaign item. It defines the period over which the goal for a campaign item should be reached.</inlineHelpText>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__Adtype__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__KeyValues__c</fullName>
        <description>Here you can enter keys and values which are not shown on the documents and appear not in the Media Configuration.
This Informationen will be directly submitted to the AdServer at checking availability booking a MediaCampaign and there Campaign Items to the AdServer.</description>
        <inlineHelpText>Here you can enter keys and values which are not shown on the documents and appear not in the Media Configuration.
This Informationen will be directly submitted to the AdServer at checking availability, booking a Campaign Items to the AdServer.</inlineHelpText>
        <label>KeyValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Keyvalue_Keyword__c</fullName>
        <label>Keyvalue_Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Master__c</fullName>
        <description>Choose the master slots for a master &amp; companion ad in DART.</description>
        <inlineHelpText>Choose the master slots for a master &amp; companion ad in dfp.</inlineHelpText>
        <label>Master</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1024x768</fullName>
                </value>
                <value>
                    <fullName>10x1</fullName>
                </value>
                <value>
                    <fullName>15x1</fullName>
                </value>
                <value>
                    <fullName>160x50</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>1x5</fullName>
                </value>
                <value>
                    <fullName>206x60</fullName>
                </value>
                <value>
                    <fullName>20x1</fullName>
                </value>
                <value>
                    <fullName>25x1</fullName>
                </value>
                <value>
                    <fullName>2x2</fullName>
                </value>
                <value>
                    <fullName>2x5</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x260</fullName>
                </value>
                <value>
                    <fullName>300x60</fullName>
                </value>
                <value>
                    <fullName>30x1</fullName>
                </value>
                <value>
                    <fullName>320x150</fullName>
                </value>
                <value>
                    <fullName>320x480</fullName>
                </value>
                <value>
                    <fullName>320x50</fullName>
                </value>
                <value>
                    <fullName>320x51</fullName>
                </value>
                <value>
                    <fullName>320x60</fullName>
                </value>
                <value>
                    <fullName>40x1</fullName>
                </value>
                <value>
                    <fullName>420x240</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>480x320</fullName>
                </value>
                <value>
                    <fullName>480x360</fullName>
                </value>
                <value>
                    <fullName>480x361</fullName>
                </value>
                <value>
                    <fullName>480x70</fullName>
                </value>
                <value>
                    <fullName>50x1</fullName>
                </value>
                <value>
                    <fullName>60x1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaDifferentiation__c</fullName>
        <description>This picklist allows you to group AdTypes. This classification can be used in reports and controls e.g. functions and assignment information in Media Search, AdMaterial Management and Commitments.</description>
        <inlineHelpText>Please choose the relevant Media Differentiation for this AdType.</inlineHelpText>
        <label>Media Differentiation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaDifferentiation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaType__c</fullName>
        <description>This field is no longer used by ADvendio.</description>
        <label>Media Type (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Out-of-Home</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MidrollIndex__c</fullName>
        <description>The index of the mid-roll to target. Only valid if the positionType is VideoPositionType.MIDROLL, otherwise this field will be ignored.</description>
        <inlineHelpText>The index of the mid-roll to target. Only valid if the positionType is VideoPositionType.MIDROLL, otherwise this field will be ignored.</inlineHelpText>
        <label>Midroll Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__OVK_ID__c</fullName>
        <description>The OVK ID is a unique ad type id assigned by OVK.</description>
        <inlineHelpText>The OVK ID is a unique ad type id assigned by OVK.</inlineHelpText>
        <label>OVK ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__PageEquivalency__c</fullName>
        <label>Single Product Page Equivalency</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Price_Pricegroup_1__c</fullName>
        <label>Price Pricegroup 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Price_Pricegroup_2__c</fullName>
        <label>Price Pricegroup 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Price_Pricegroup_3__c</fullName>
        <label>Price Pricegroup 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>